tests/snapshots/mechanics-boosters-bonus_skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Rifter
ship/scanStrength                            = 8.000000
ship/passiveShieldEffectiveRechargeRate      = 2.482759
ship/passiveShieldRechargeRate               = 1.800000
ship/shieldEffectiveBoostRate                = 57.379310
ship/shieldBoostRate                         = 41.600000
ship/ehp                                     = 1809.744371
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.100000
ship/shieldEhp                               = 620.689648
ship/hullEhp                                 = 522.388047
ship/armorEhp                                = 666.666677
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 24.000000
ship/cpuFree                                 = 63.000000
ship/capacitorDepletesIn                     = 12.000000
ship/capacitorPeakDeltaPercentage            = -300.000000
ship/capacitorPeakDelta                      = -15.000000
ship/capacitorPeakLoad                       = 20.000000
ship/capacitorPeakRecharge                   = 5.000000
ship/alignTime                               = 4.733364
ship/powerLoad                               = 17.000000
ship/cpuLoad                                 = 67.000000
ship/shipBonusMF                             = 0.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusMF2                            = 0.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

medium_1/type              = Medium Shield Booster II
medium_1/state             = active
medium_1/shieldBoostRate   = 41.600000
medium_1/capacitorPeakLoad = 20.000000
medium_1/cycleTime         = 3000.000000
medium_1/shieldBonus       = 124.800000

high_1/type                 = 200mm AutoCannon II
high_1/state                = active
high_1/speedWithReload      = 37083.332009
high_1/speedOfReload        = 33333.332009
high_1/chargeAmount         = 0.300000
high_1/cycleTime            = 3750.000000
high_1/barrageDmgMultiplier = 3.465000
high_1/barrageFalloff       = 5160.000000

booster_1/type  = Standard Blue Pill Booster
booster_1/state = offline
