tests/snapshots/mechanics-drone_stack_state-skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Vexor
ship/scanStrength                            = 16.000000
ship/passiveShieldEffectiveRechargeRate      = 3.034483
ship/passiveShieldRechargeRate               = 2.200000
ship/ehp                                     = 7465.278955
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.162500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 1517.241361
ship/hullEhp                                 = 2985.074553
ship/armorEhp                                = 2962.963041
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/droneCapacityLoad                       = 50.000000
ship/droneActive                             = 3.000000
ship/droneDamagePerSecond                    = 55.526399
ship/damagePerSecondWithReload               = 55.526399
ship/damagePerSecondWithoutReload            = 55.526399
ship/powerFree                               = 699.000000
ship/cpuFree                                 = 270.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 7.512953
ship/capacitorPeakRecharge                   = 7.512953
ship/alignTime                               = 8.617206
ship/powerLoad                               = 1.000000
ship/cpuLoad                                 = 30.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusGC2                            = 0.000000
ship/droneBandwidthLoad                      = 30.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

low_1/type             = Drone Damage Amplifier II
low_1/state            = online
low_1/damageMultiplier = 1.205000

dronebay_1-3/type                         = Hammerhead II
dronebay_1-3/state                        = active
dronebay_1-3/damageVolley                 = 74.035198
dronebay_1-3/speedWithReload              = 4000.000000
dronebay_1-3/damagePerSecondWithoutReload = 18.508800
dronebay_1-3/damageMultiplier             = 2.313600

dronebay_4-5/type             = Hammerhead II
dronebay_4-5/state            = offline
dronebay_4-5/damageVolley     = 74.035198
dronebay_4-5/damageMultiplier = 2.313600
