tests/snapshots/mechanics-drone_stack_state-skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
capacitor/capacity             = 1812.000000
capacitor/depletes_in          = -1.000000
capacitor/peak                 = 12.521589
capacitor/percentage           = 100.000000
capacitor/recharge             = 361.875000
capacitor/stable               = true
cpu/capacity                   = 375.000000
cpu/free                       = 345.000000
defense/armor/hp               = 2500.000000
defense/armor/resist/em        = 50.000000
defense/armor/resist/expl      = 10.000002
defense/armor/resist/kin       = 35.000002
defense/armor/resist/therm     = 35.000002
defense/ehp                    = 9331.598693
defense/recharge/armor         = 0.000000
defense/recharge/hull          = 0.000000
defense/recharge/passive       = 3.666667
defense/recharge/shield        = 0.000000
defense/shield/hp              = 1375.000000
defense/shield/recharge        = 937.500000
defense/shield/resist/em       = 0.000000
defense/shield/resist/expl     = 50.000000
defense/shield/resist/kin      = 39.999998
defense/shield/resist/therm    = 19.999999
defense/structure/hp           = 2500.000000
defense/structure/resist/em    = 32.999998
defense/structure/resist/expl  = 32.999998
defense/structure/resist/kin   = 32.999998
defense/structure/resist/therm = 32.999998
drones/active                  = 3.000000
drones/bandwidth               = 75.000000
drones/bandwidth_load          = 30.000000
drones/capacity                = 125.000000
drones/capacity_load           = 50.000000
drones/dps                     = 171.784796
drones/range                   = 60.000000
navigation/agility             = 0.378000
navigation/align_time          = 5.816614
navigation/mass                = 11100.000000
navigation/speed               = 243.750000
navigation/warp_speed          = 4.000000
offense/alpha                  = 0.000000
offense/dps                    = 171.784796
offense/dps_with_reload        = 171.784796
offense/drone_dps              = 171.784796
power/capacity                 = 875.000000
power/free                     = 874.000000
targeting/lock_range           = 65.625000
targeting/max_locked_targets   = 6.000000
targeting/scan_resolution      = 350.000000
targeting/sensor_strength      = 19.200000
targeting/signature_radius     = 145.000000

low_1/type             = Drone Damage Amplifier II
low_1/state            = online
low_1/hp               = 75.000000
low_1/damageMultiplier = 2.711250

dronebay_1-3/type                         = Hammerhead II
dronebay_1-3/state                        = active
dronebay_1-3/damageVolley                 = 229.046395
dronebay_1-3/speedWithReload              = 4000.000000
dronebay_1-3/damagePerSecondWithoutReload = 57.261599
dronebay_1-3/hp                           = 900.000000
dronebay_1-3/maxVelocity                  = 2520.000000
dronebay_1-3/maxRange                     = 5250.000000
dronebay_1-3/damageMultiplier             = 7.157700
dronebay_1-3/shieldCapacity               = 225.000000
dronebay_1-3/armorHP                      = 405.000000

dronebay_4-5/type             = Hammerhead II
dronebay_4-5/state            = offline
dronebay_4-5/damageVolley     = 229.046395
dronebay_4-5/hp               = 900.000000
dronebay_4-5/maxVelocity      = 2520.000000
dronebay_4-5/maxRange         = 5250.000000
dronebay_4-5/damageMultiplier = 7.157700
dronebay_4-5/shieldCapacity   = 225.000000
dronebay_4-5/armorHP          = 405.000000
