tests/snapshots/mechanics-fighters-launched_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Thanatos
ship/fighterTubesUsed                        = 2.000000
ship/fighterSupportSlotsUsed                 = 1.000000
ship/fighterLightSlotsUsed                   = 1.000000
ship/fighterDamagePerSecond                  = 355.452129
ship/fighterCapacityLoad                     = 15000.000000
ship/scanStrength                            = 91.200000
ship/passiveShieldEffectiveRechargeRate      = 21.264368
ship/passiveShieldRechargeRate               = 15.416667
ship/ehp                                     = 380176.939315
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.162500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 95689.653992
ship/hullEhp                                 = 155783.578209
ship/armorEhp                                = 128703.707113
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/damagePerSecondWithReload               = 355.452129
ship/damagePerSecondWithoutReload            = 355.452129
ship/powerFree                               = 785000.000000
ship/cpuFree                                 = 831.250000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 54.563492
ship/capacitorPeakRecharge                   = 54.563492
ship/alignTime                               = 25.044145
ship/hp                                      = 104375.000000
ship/powerOutput                             = 875000.000000
ship/powerLoad                               = 90000.000000
ship/maxVelocity                             = 100.000000
ship/cpuOutput                               = 906.250000
ship/cpuLoad                                 = 75.000000
ship/rechargeRate                            = 3150000.000000
ship/agility                                 = 0.014808
ship/maxTargetRange                          = 375000.000000
ship/scanSpeed                               = 5062.500000
ship/warpCapacitorNeed                       = 0.000000
ship/scanMagnetometricStrength               = 91.200000
ship/shieldCapacity                          = 69375.000000
ship/armorHP                                 = 86875.000000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 11250000.000000
ship/capacitorCapacity                       = 68750.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 81.250000
ship/advancedAgility                         = 0.750000
ship/jumpDriveRange                          = 7.000000
ship/jumpDriveConsumptionAmount              = 1500.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.712500
ship/fighterCapacity                         = 93750.000000
ship/shipBonusCarrierG1                      = 25.000000
ship/shipBonusCarrierG2                      = 25.000000
ship/shipBonusCarrierG3                      = 12.500000
ship/shipBonusCarrierG4                      = 5.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitJumpPassengerCount               = 30.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000
ship/shipBonusCarrierG5                      = 10.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type  = Fighter Support Unit II
high_1/state = online

fightertube_1/type                                        = Templar II
fightertube_1/state                                       = active
fightertube_1/fighterAbilityAttackMissileDamagePerSecond  = 59.242021
fightertube_1/damagePerSecondWithReload                   = 59.242021
fightertube_1/damagePerSecondWithoutReload                = 59.242021
fightertube_1/maxVelocity                                 = 1435.968672
fightertube_1/shieldCapacity                              = 5410.968458
fightertube_1/shieldRechargeRate                          = 657999.998331
fightertube_1/fighterAbilityMissilesDamageMultiplier      = 2.578125
fightertube_1/fighterAbilityMissilesRange                 = 12500.000000
fightertube_1/fighterAbilityMissilesDuration              = 13159.999967
fightertube_1/fighterAbilityAttackMissileDamageMultiplier = 2.578125
fightertube_1/fighterAbilityAttackMissileDuration         = 4699.999988
fightertube_1/fighterAbilityAttackMissileRangeOptimal     = 12000.000000

fightertube_2/type                                = Dromi II
fightertube_2/state                               = active
fightertube_2/maxVelocity                         = 985.799947
fightertube_2/shieldCapacity                      = 13974.608621
fightertube_2/shieldRechargeRate                  = 2067999.994755
fightertube_2/fighterAbilityAfterburnerSpeedBonus = 110.000000
fightertube_2/fighterSquadronOrbitRange           = 10000.000000
